--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,12 @@ PyPDF2==3.0.1
 six==1.16.0
 typing_extensions==4.9.0
 virtualenv==20.25.0
+Flask==2.1.0
+fuzzywuzzy==0.18.0
+pandas==1.3.5
+matplotlib==3.5.1
+seaborn==0.11.2
+numpy==1.21.5
+flask-mysqldb==0.2.0
+PyPDF2==1.26.0
+flask-mail==0.9.1
